# i07-odin-detector

./: .dockerignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: container.yml
cpp/: CMakeLists.txt
cpp/frameProcessor/include/: CMakeLists.txt  ThresholdBinPlugin.h
cpp/frameProcessor/src/: CMakeLists.txt  ThresholdBinPlugin.cpp  ThresholdBinPluginLib.cpp
cpp/frameProcessor/test/: CMakeLists.txt  ThresholdBinPluginTest.cpp
